[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/GameTemplate/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainMenu/GameOverContainer.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/m5x7_16.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 1.0
bg_color = Color( 0.0705882, 0.305882, 0.537255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 1.0
bg_color = Color( 0.227451, 0.266667, 0.4, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 1.0
bg_color = Color( 0.14902, 0.168627, 0.266667, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0705882, 0.305882, 0.537255, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 1.0
bg_color = Color( 0.14902, 0.168627, 0.266667, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
anti_aliasing = false

[node name="VBoxMain" type="VBoxContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 258.0
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 240.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 49.0
margin_right = 191.0
margin_bottom = 242.0
size_flags_vertical = 3
custom_constants/separation = 21

[node name="Label" type="Label" parent="HBoxContainer/ButtonContainer"]
margin_right = 142.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "GAME OVER"

[node name="TryAgain" parent="HBoxContainer/ButtonContainer" groups=[
"MainMenu",
] instance=ExtResource( 1 )]
margin_top = 50.0
margin_right = 142.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Try Again"

[node name="MainMenu" parent="HBoxContainer/ButtonContainer" instance=ExtResource( 1 )]
margin_top = 106.0
margin_right = 142.0
margin_bottom = 141.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Main Menu"
[connection signal="pressed" from="HBoxContainer/ButtonContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
